include gxx_linux-64 in environment.yml for compiling mod files change windows compile to also use nrnivmodl by default (since NEURON 7.7)

--- a/environment.yml
+++ b/environment.yml
@@ -10,4 +10,6 @@ dependencies:
   - seaborn
   - colorlog
   - neuron
+  - gxx_linux-64
+  - h5py
 prefix: C:\Users\Chris\Anaconda3\envs\chloride-dynamics-io-neuron
